# bincio-activity

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  README.md  extract_config.example.yaml  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
bincio/: __init__.py  cli.py  dev.py  reextract_cmd.py
bincio/edit/: cli.py  ops.py  server.py
bincio/extract/: cli.py  config.py  dedup.py  dem.py  garmin_api.py  garmin_sync.py  ingest.py  metrics.py  models.py  simplify.py  sport.py  strava_api.py  strava_csv.py  strava_zip.py  timeseries.py  writer.py
bincio/extract/parsers/: base.py  factory.py  fit.py  gpx.py  tcx.py
bincio/import_/: __init__.py  cli.py  strava.py
bincio/render/: cli.py  merge.py
bincio/serve/: cli.py  db.py  init_cmd.py  server.py
docs/: admin-guide.md  architecture.md  architecture.mmd  developer-guide.md  elevation.md  garmin_connect_disclaimer.md  getting-started.md  graph.html  index.md  schema.md  user-guide.md
docs/deployment/: multi-user.md  single-user.md  vps.md
docs/reference/: api.md  cli.md
mobile/: .gitignore  ThemeContext.tsx  app.json  package-lock.json  package.json  setup.sh  theme.ts
mobile/android/app/: build.gradle
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  import.tsx  index.tsx  search.tsx  settings.tsx
mobile/app/activity/: [id].tsx
mobile/assets/: bincio.whl
mobile/components/: ActivityCard.tsx
mobile/db/: index.ts  queries.ts  sync.ts
mobile/extraction/: PyodideWebView.tsx  extractActivity.ts  extractServer.ts
schema/: bas-v1.schema.json
scripts/: bulk_private.py  dev_test.py  disk_report.sh  gen_graph.py  pull_feedback.sh  rebuild.sh
site/: .env.example  astro.config.mjs  capacitor.config.ts  package-lock.json  package.json  tailwind.config.mjs
site/public/: sw.js
site/src/components/: ActivityCharts.svelte  ActivityDetail.svelte  ActivityDetailLoader.svelte  ActivityFeed.svelte  (+9 more)
tests/: test_db.py  test_dedup.py  test_dem.py  test_edit_server.py  test_merge.py  test_metrics.py  test_pipeline.py  test_server_imports.py  test_simplify.py  test_sport.py  test_writer.py
(+40 files in other folders)
